# TheoreticalDiary

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTORS.txt  LICENSES.txt  README.md  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  autherrorwindow.cpp  autherrorwindow.h  autherrorwindow.ui  build-cryptopp.sh  build.py  changepanealert.cpp  changepanealert.h  changepanealert.ui  confirmdelete.cpp  confirmdelete.h  confirmdelete.ui  confirmoverwrite.cpp  confirmoverwrite.h  confirmoverwrite.ui  diary.qrc  diaryentrylist.cpp  diaryentrylist.h  diaryentrylist.ui  diaryholder.cpp  diaryholder.h  diarywindow.cpp  diarywindow.h  diarywindow.ui  encryptor.cpp  encryptor.h  flushwindow.cpp  flushwindow.h  flushwindow.ui  googlewrapper.cpp  googlewrapper.h  (+52 more)
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  linux.yml  main.yml  osx.yml  release.yml  windows.yml
docs/: docs.tex  latex-workschop-config.json  localSettings.yaml
fonts/: fonts.qrc
images/: images.qrc
images/osx_icons/: icons.icns
src/: MainWindow.cpp  MainWindow.h  MainWindow.ui  main.cpp  resources.qrc
src/core/: Application.cpp  Application.h  AsyncTask.h  Config.cpp  Config.h  Constants.h  Diary.cpp  Diary.h  DiaryKey.cpp  DiaryKey.h  Icons.cpp  Icons.h  RunGuard.cpp  RunGuard.h  TimeDelta.cpp  TimeDelta.h  Util.cpp  Util.h  diaryholder.cpp  diaryholder.h  googlewrapper.cpp  googlewrapper.h  internalmanager.cpp  internalmanager.h  theoreticaldiary.cpp  theoreticaldiary.h
src/crypto/: Cipher.cpp  Cipher.h  DiaryKey.cpp  DiaryKey.h  Hash.cpp  Hash.h  Random.cpp  Random.h
src/gui/: CategoryListWidget.cpp  CategoryListWidget.h  ContextMenuOverride.h  DiaryMainMenuWidget.cpp  DiaryTabWidget.cpp  DiaryTabWidget.h  DiaryTabWidget.ui  DiaryUnlockWidget.cpp  DiaryUnlockWidget.h  DiaryUnlockWidget.ui  DiaryWidget.cpp  DiaryWidget.h  DiaryWidget.ui  Font.cpp  Font.h  Icons.cpp  Icons.h  KMessageWidget.cpp  KMessageWidget.h  MainMenu.cpp  MainMenu.h  MainMenu.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MessageWidget.cpp  MessageWidget.h  PasswordLineEdit.cpp  PasswordLineEdit.h  SettingsWidget.cpp  SettingsWidget.h  SettingsWidget.ui  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  apiresponse.cpp  apiresponse.h  apiresponse.ui  calendarbutton.cpp  calendarbutton.h  (+45 more)
src/gui/diary_menu/: DiaryMainMenuWidget.cpp  DiaryMainMenuWidget.h  DiaryMainMenuWidget.ui  DiaryUnlockWidget.cpp  DiaryUnlockWidget.h  DiaryWidget.cpp  DiaryWidget.h  DiaryWidget.ui  EntryEditor.cpp  EntryEditor.h  EntryEditor.ui
src/gui/diary_menu/calendar/: DiaryCalendar.cpp  DiaryCalendar.h  DiaryCalendar.ui  MonthTableWidget.cpp  MonthTableWidget.h
src/gui/diary_menu/text_editor/: MarkdownEditorWidget.cpp  MarkdownEditorWidget.h  MarkdownEditorWidget.ui  MarkdownTextEditor.cpp  MarkdownTextEditor.h  MarkdownTextEditor.ui  Schema.cpp  Schema.h  linenumberarea.h  markdownhighlighter.cpp  qmarkdowntextedit.cpp  qmarkdowntextedit.h  qplaintexteditsearchwidget.cpp  qplaintexteditsearchwidget.h  qplaintexteditsearchwidget.ui
src/gui/editor/: DiaryMainMenuWidget.cpp  DiaryMainMenuWidget.h  DiaryMainMenuWidget.ui  DiaryUnlockWidget.cpp  DiaryUnlockWidget.h  DiaryUnlockWidget.ui  DiaryWidget.cpp  DiaryWidget.h  DiaryWidget.ui
src/gui/styles/: statecolorpalette.cpp  statecolorpalette.h
src/gui/styles/base/: basestyle.cpp  basestyle.h  phantomcolor.cpp
src/gui/styles/dark/: darkstyle.cpp  darkstyle.h
src/gui/styling/: BaseStyle.cpp  BaseStyle.qss  DarkStyle.cpp  DarkStyle.h  DarkStyle.qss  LightStyle.cpp  PhantomColour.cpp  PhantomColour.h  StyleManager.cpp  StyleManager.h
src/icons/: icons.qrc
src/icons/application/: index.theme
src/meta/: dummysettings  me.someretical.TheoreticalDiary.desktop
src/streams/: LayeredStream.cpp  LayeredStream.h  StoreDataStream.cpp  StoreDataStream.h  SymmetricCipherStream.cpp  SymmetricCipherStream.h  qtiocompressor.cpp  qtiocompressor.h
src/styling/: BaseStyle.cpp  BaseStyle.qss  DarkStyle.cpp  DarkStyle.h  LightStyle.cpp  LightStyle.h  LightStyle.qss  StyleManager.cpp  StyleManager.h
src/util/: Constants.h  Font.h  RunGuard.cpp  RunGuard.h  Util.cpp  Util.h  alertlabel.cpp  alertlabel.h  custommessageboxes.cpp  custommessageboxes.h  diarycalendarbutton.h  diarycomparisonlabel.h  diarypixellabel.h  encryptor.cpp  encryptor.h  eventfilters.cpp  eventfilters.h  hashcontroller.h  misc.cpp  misc.h  passwordlineedit.cpp  passwordlineedit.h  runguard.cpp  runguard.h  zipper.cpp  zipper.h
styles/: aboutwindow.qss  confirmoverwrite.qss  day_label_ok.qss  day_label_starred.qss  day_label_very_good.qss  defaultwindow.qss  diaryeditor.qss  diarywindow.qss  mainwindow.qss  material_cyan_dark.qss  s_bad.qss  s_good.qss  s_ok.qss  s_star_black.qss  s_star_white.qss  s_very_bad.qss  s_very_good.qss  styles.qrc  theoreticalcalendar.qss  updatepassword.qss
styles/dark/: dangerbutton.qss  darkstyle.qss  diaryeditor.qss  diaryentrylist.qss  diaryentryviewer.qss  diarypixels.qss  diarystats.qss  mainmenu.qss  material_cyan.qss  material_cyan_dark.qss  optionsmenu.qss  promptpassword.qss
styles/dark/diary_entry_list/: 0.qss  1.qss  2.qss  3.qss  4.qss  5.qss  bad.qss  base.qss  good.qss  very_bad.qss
styles/dark/pixels/: 0.qss  1.qss  3.qss  5.qss
styles/dark/theoretical_calendar/: 1.qss  2.qss  3.qss  4.qss  5.qss  base.qss  ok.qss  selected.qss  unknown.qss  very_bad.qss  very_good.qss
styles/global/: aboutdialog.qss  alertlabel.qss  apiresponse.qss  black_star.qss  diarypixels.qss  diarystats.qss  licensesdialog.qss  mainmenu.qss  passwords.qss  small_black_star.qss  small_white_star.qss  standaloneoptions.qss  star_white.qss  white_star.qss
styles/global/pixels/: 2.qss  4.qss
styles/light/: dangerbutton.qss  diaryeditor.qss  diaryentryviewer.qss  diarystats.qss  lightstyle.qss  material_cyan.qss  optionsmenu.qss
styles/light/diary_entry_list/: 0.qss  1.qss  2.qss  3.qss  4.qss  5.qss  base.qss
styles/light/theoretical_calendar/: 1.qss  2.qss  3.qss  4.qss  5.qss  base.qss  selected.qss
text/: LICENSES.txt  text.qrc
(+2 files in other folders)
